--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <style>
-    body{
-        margin:0;
-        overflow: hidden;
-    }
-    </style>
 </head>
 <body>
+    <div id="game"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.js"></script>
+    <script src="maze.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
