--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="game"></div>
+    <p id="level"></p>
+    <p id="coins"></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.js"></script>
+    <script src="helpers.js"></script>
     <script src="maze.js"></script>
     <script src="index.js"></script>
 </body>
