--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
     <div id="game"></div>
     <div id="score-bar">
     <p id="level"></p>
     <p id="coins"></p>
     </div>
-    <div class="win hidden">
-        <h1>Well done</h1>
-        <button id="next-level">Next level</button>
+    <div class="menu hidden">
+        <h1 id="menu-head">Well done</h1>
+        <button id="menu-button">Next level</button>
+    </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.js"></script>
     <script src="helpers.js"></script>
