--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p id="level"></p>
     <p id="coins"></p>
     </div>
-    <div class="menu hidden">
+    <div class="menu">
         <h1 id="menu-head">Well done</h1>
         <button id="menu-button">Next level</button>
     </div>
