--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta charset="UTF-8" />
     <meta
       content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -11,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Maze-Game</title>
   </head>
   <body>
     <div class="container">
@@ -20,14 +21,15 @@
         <div id="stats">
           <p id="level"></p>
           <p id="coins"></p>
+          <p id="timer"></p>
         </div>
         <div id="shop">
-        <button id="view">Remove all fake walls</button>
+        <button id="wallBreaker"></button>
         </div>
       </div>
       <div class="menu">
-        <h1 id="menu-head">Well done</h1>
-        <button id="menu-button">Next level</button>
+        <h1 id="menu-head">Maze-Game</h1>
+        <button id="menu-button">Begin</button>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.js" ></script>
