add timer & leveldata

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <p id="timer"></p>
         </div>
         <div id="shop">
-        <button id="wallBreaker"></button>
+          <button id="wallBreaker"></button>
+          <button id="addTime"></button>
         </div>
       </div>
       <div class="menu">
