add moneyadd shop

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="shop">
           <button id="wallBreaker"></button>
           <button id="addTime"></button>
+          <button id="addMoney"></button>
         </div>
       </div>
       <div class="menu">
