--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <body>
     <div class="container">
       <div id="game"></div>
+      <div id="timer"></div>
       <div id="score-bar">
         <div id="stats">
           <p id="level"></p>
           <p id="coins"></p>
-          <p id="timer"></p>
         </div>
         <div id="shop">
           <button id="wallBreaker"></button>
