implement reset button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div class="container">
       <div id="game"></div>
+      <div id="timer-back"></div>
       <div id="timer"></div>
       <div id="score-bar">
         <div id="stats">
@@ -51,9 +52,9 @@
         </div>
       </div>
       <div class="menu">
+        <button id="reset">Start Over</button>
         <h1 id="menu-head">Maze-Game</h1>
         <button id="menu-button">Begin</button>
-        <button id="reset">Reset your game</button>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.js" ></script>
